gcc/testsuite/rust/rustc/ui/unsized/unsized-fn-arg.rs
//@ run-rustfix
#![crate_type="lib"]
#![allow(unused)]

fn f<T: ?Sized>(t: T) {}
// { dg-error ".E0277." "" { target *-*-* } .-1 }

